// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[convertNumberSkeletonToNumberFormatOptions] case: "currency/CAD ." 1`] = `
Object {
  "currency": "CAD",
  "maximumFractionDigits": 0,
  "style": "currency",
}
`;

exports[`[convertNumberSkeletonToNumberFormatOptions] case: "currency/GBP .0+/@@@" 1`] = `
Object {
  "currency": "GBP",
  "maximumSignificantDigits": 3,
  "minimumFractionDigits": 1,
  "minimumSignificantDigits": 3,
  "style": "currency",
}
`;

exports[`[convertNumberSkeletonToNumberFormatOptions] case: "currency/GBP .00##/@@@" 1`] = `
Object {
  "currency": "GBP",
  "maximumFractionDigits": 4,
  "maximumSignificantDigits": 3,
  "minimumFractionDigits": 2,
  "minimumSignificantDigits": 3,
  "style": "currency",
}
`;

exports[`[convertNumberSkeletonToNumberFormatOptions] case: "percent .00/@##" 1`] = `
Object {
  "maximumFractionDigits": 2,
  "maximumSignificantDigits": 3,
  "minimumFractionDigits": 2,
  "minimumSignificantDigits": 1,
  "style": "percent",
}
`;

exports[`[convertNumberSkeletonToNumberFormatOptions] case: "percent .00/@@@" 1`] = `
Object {
  "maximumFractionDigits": 2,
  "maximumSignificantDigits": 3,
  "minimumFractionDigits": 2,
  "minimumSignificantDigits": 3,
  "style": "percent",
}
`;

exports[`[convertNumberSkeletonToNumberFormatOptions] case: "percent .00/@@@@+" 1`] = `
Object {
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minimumSignificantDigits": 4,
  "style": "percent",
}
`;

exports[`case: "@@#" 1`] = `
Array [
  Object {
    "style": Object {
      "tokens": Array [
        Object {
          "options": Array [],
          "stem": "@@#",
        },
      ],
      "type": 0,
    },
    "type": 2,
    "value": "0",
  },
]
`;

exports[`case: "@@#" 2`] = `"{0, number, ::@@#}"`;

exports[`case: "compact-short currency/GBP" 1`] = `
Array [
  Object {
    "style": Object {
      "tokens": Array [
        Object {
          "options": Array [],
          "stem": "compact-short",
        },
        Object {
          "options": Array [
            "GBP",
          ],
          "stem": "currency",
        },
      ],
      "type": 0,
    },
    "type": 2,
    "value": "0",
  },
]
`;

exports[`case: "compact-short currency/GBP" 2`] = `"{0, number, ::compact-short currency/GBP}"`;

exports[`case: "currency/CAD unit-width-narrow" 1`] = `
Array [
  Object {
    "style": Object {
      "tokens": Array [
        Object {
          "options": Array [
            "CAD",
          ],
          "stem": "currency",
        },
        Object {
          "options": Array [],
          "stem": "unit-width-narrow",
        },
      ],
      "type": 0,
    },
    "type": 2,
    "value": "0",
  },
]
`;

exports[`case: "currency/CAD unit-width-narrow" 2`] = `"{0, number, ::currency/CAD unit-width-narrow}"`;
